# Backend/config/swagger_output.json
@@ -8,11 +8,11 @@
   "servers": [
     {
       "url": "http://localhost:5000",
-      "description": "Local server"
+      "description": "Local Development"
     },
     {
       "url": "https://healthcrm.onrender.com",
-      "description": "Render server"
+      "description": "Production Server"
     }
   ],
   "tags": [
@@ -96,7 +96,7 @@
         }
       }
     },
-    "/api/staff/registerstaff": {
+    "/api/staff/registersuperadmin": {
       "post": {
         "tags": [
           "staff"
@@ -106,8 +106,62 @@
           "201": {
             "description": "Created"
           },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "username": {
+                    "example": "any"
+                  },
+                  "email": {
+                    "example": "any"
+                  },
+                  "password": {
+                    "example": "any"
+                  },
+                  "role_id": {
+                    "example": "any"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/staff/registerstaff": {
+      "post": {
+        "tags": [
+          "staff"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
           },
           "500": {
             "description": "Internal Server Error"
