# Backend/src/modules/authstaff/authstaff.route.js
@@ -3,22 +3,29 @@ import { can } from "../../middlewares/Permission.js";
 import { authMiddleware } from "../../middlewares/authmiddlewere.js";
 import { validateRequest } from "../../middlewares/validateRequest.js";
 import { registerStaffValidation } from "./validate/authstaff.validate.js";
-import { registerStaffcontroller } from "./authstaff.controller.js";
+import { registerStaffcontroller, registerSuperAdminController } from "./authstaff.controller.js";
 import { loginStaffcontroller, updateStaffcontroller, getStaffcontroller, getStaffByIdcontroller } from "./authstaff.controller.js";
 const router = Router();
+
+router.post("/registersuperadmin",
+    /* 
+        #swagger.tags = ['staff'] 
+    */
+    registerSuperAdminController
+);
 
 router.post("/registerstaff",
     /* 
         #swagger.tags = ['staff'] 
     */
-authMiddleware,can("CREATE_STAFF"), registerStaffValidation, validateRequest, registerStaffcontroller);
+    authMiddleware, can("CREATE_STAFF"), registerStaffValidation, validateRequest, registerStaffcontroller);
 
 
 router.post("/loginstaff",
     /* 
         #swagger.tags = ['staff'] 
     */ loginStaffcontroller);
- 
+
 router.put("/updatestaff/:id", authMiddleware,
     /* 
         #swagger.tags = ['staff'] 
